; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/at91/extr_clk-sam9x60-pll.c_sam9x60_pll_round_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/at91/extr_clk-sam9x60-pll.c_sam9x60_pll_round_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.sam9x60_pll = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk_hw*, i64, i64*)* @sam9x60_pll_round_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @sam9x60_pll_round_rate(%struct.clk_hw* %0, i64 %1, i64* %2) #0 {
  %4 = alloca %struct.clk_hw*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca %struct.sam9x60_pll*, align 8
  store %struct.clk_hw* %0, %struct.clk_hw** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64* %2, i64** %6, align 8
  %8 = load %struct.clk_hw*, %struct.clk_hw** %4, align 8
  %9 = call %struct.sam9x60_pll* @to_sam9x60_pll(%struct.clk_hw* %8)
  store %struct.sam9x60_pll* %9, %struct.sam9x60_pll** %7, align 8
  %10 = load %struct.sam9x60_pll*, %struct.sam9x60_pll** %7, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i64*, i64** %6, align 8
  %13 = load i64, i64* %12, align 8
  %14 = call i64 @sam9x60_pll_get_best_div_mul(%struct.sam9x60_pll* %10, i64 %11, i64 %13, i32 0)
  ret i64 %14
}

declare dso_local %struct.sam9x60_pll* @to_sam9x60_pll(%struct.clk_hw*) #1

declare dso_local i64 @sam9x60_pll_get_best_div_mul(%struct.sam9x60_pll*, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
